--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Exchange</string>
+    <string name="login_username_email">Username or E-mail</string>
+    <string name="login_password">Password</string>
 </resources>
